# map-dev

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  secrets.json.example
docs/: architecture.md  contour-generation.md  swisstopo-layers.md
scripts/: scrape_styles.py
src/topo_map/: __init__.py  main.py  style_scraper.py  tile_cache.py
src/topo_map/routes/: __init__.py  api.py  pages.py
static/css/: style.css
static/js/: map-grid.js
styles/: custom.json
styles/raster/: basemap-at-grau.json  basemap-at-hidpi.json  basemap-at-ortho.json  basemap-at-standard.json  basemap-at-surface.json  basemap-at-terrain.json  bayern-topo.json  opentopomap.json  swisstopo.json
styles/scraped/: maptiler-outdoor.json  maptiler-topo.json  tracestrack-topo.json
templates/: index.html
