[project]
name = "topo-map"
version = "0.1.0"
description = "Topographic map style development environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "hatchling>=1.28.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/topo_map"]
